--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,53 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Node dependencies
 node_modules/
 
-# Expo
+# Logs
+npm-debug.log*
+yarn-debug.log*
+*.log
+
+# Environment files (sensitive)
+.env
+.env.local
+.env.production
+.env.development
+
+# Expo (if using Expo)
 .expo/
-dist/
-web-build/
-expo-env.d.ts
+.expo-shared/
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# Android
+android/.gradle/
+android/app/build/
+android/build/
+android/local.properties
+android/.idea/
+android/.settings/
 
-# Metro
+# iOS
+ios/Pods/
+ios/build/
+ios/DerivedData/
+ios/*.xcworkspace
+
+# Xcode user data
+*.xcuserstate
+*.xcuserdata
+
+# Metro cache
 .metro-health-check*
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# Temporary files
+*.tmp
+*.temp
 
-# macOS
+# IDE / Editor
+.vscode/
+.idea/
+
+# OS files
 .DS_Store
-*.pem
+Thumbs.db
 
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
-
-# generated native folders
-/ios
-/android
+# Coverage (if using tests)
+coverage/
